unpackaged/main/default/objects/Opportunity/fields/Access_Quote_MPLS_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Access_Quote_MPLS_Carrier__c</fullName>
    <label>Access Quote-MPLS Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>