unpackaged/main/default/objects/Opportunity/fields/Account_Source_ACQ__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_ACQ__c</fullName>
    <formula>text(Account.Account_Source_acq__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Source ACQ</label>
    <type>Text</type>
</CustomField>