unpackaged/main/default/objects/Opportunity/fields/Actual_Port_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Port_Date__c</fullName>
    <label>Actual Port Date</label>
    <type>Date</type>
</CustomField>