unpackaged/main/default/objects/Opportunity/fields/AE_Opportunity_Total__c.field-meta.xml
<CustomField>
    <fullName>AE_Opportunity_Total__c</fullName>
    <formula>IF(ISPICKVAL(Sale_Type__c,"AnyWare"), ((AnyWare_CPE_Total__c + AnyWare_DC_Total__c+ AnyWare_IT_Total__c)  / AnyWare_Term_2016__r.Opportunity_Rate__c), 
IF(ISPICKVAL(Sale_Type__c,"AnyWare Support Only"), AnyWare_Support_Total__c/ AnyWare_Term_2016__r.Opportunity_Rate__c,
1.00))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Opportunity Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>