unpackaged/main/default/objects/Opportunity/fields/Annual_Commission__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commission__c</fullName>
    <formula>CASE(TEXT( Sale_Type__c ), 
"Cash", (Opportunity_Amount__c * Commission_Earned_By__r.Annual_Commission_Rate__c), 
"AnyWare", (AnyWare_CPE_Funding_Amount__c * Commission_Earned_By__r.Annual_Commission_Rate__c), 
"TSP", ( TSP_Funding_Amount__c * Commission_Earned_By__r.Annual_Commission_Rate__c), 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>