unpackaged/main/default/objects/Opportunity/fields/Annual_Commission_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commission_Adjustments__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Annual Commission Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>