unpackaged/main/default/objects/Opportunity/fields/AnyWare_Add_On_Number__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Add_On_Number__c</fullName>
    <label>AnyWare Add-On Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>