unpackaged/main/default/objects/Opportunity/fields/AnyWare_AR_Balance__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_AR_Balance__c</fullName>
    <formula>AnyWare_Monthly_Total__c * Remaining_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare AR Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>