unpackaged/main/default/objects/Opportunity/fields/AnyWare_Contract_CPE_Total__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Contract_CPE_Total__c</fullName>
    <formula>AnyWare_CPE_Total__c * AnyWare_Term_2016__r.Numeric_Term_in_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare Contract CPE Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>