unpackaged/main/default/objects/Opportunity/fields/AnyWare_CPE_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_CPE_Funding_Amount__c</fullName>
    <formula>IF(AND(ISPICKVAL(Sale_Type__c,"AnyWare"),ISPICKVAL(AnyWare_Funding_Source__c,"Great America Financial Services")), AnyWare_CPE_Total__c/GA_Funding_Factor__c,
IF(AND(ISPICKVAL(Sale_Type__c,"AnyWare"),ISPICKVAL(AnyWare_Funding_Source__c,"Texas Star Bank")), 
(AnyWare_CPE_Total__c+ AnyWare_DC_Total__c)/TSB_Funding_Factor__c,
IF(AND(ISPICKVAL(Sale_Type__c,"AnyWare Support Only"),ISPICKVAL(AnyWare_Funding_Source__c,"Texas Star Bank")), 
AnyWare_Support_Total__c/TSB_Funding_Factor__c,
1.00)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare CPE Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>