unpackaged/main/default/objects/Opportunity/fields/AnyWare_DC_Install_Total__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_DC_Install_Total__c</fullName>
    <label>AnyWare DC Install Total</label>
    <summarizedField>OpportunityLineItem.MS_OP_Installation_Total__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.GA_Billing_Group__c</field>
        <operation>equals</operation>
        <value>Data Center Services</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>