unpackaged/main/default/objects/Opportunity/fields/AnyWare_Funding_Factor__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Funding_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <label>AnyWare Funding Factor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>