unpackaged/main/default/objects/Opportunity/fields/AnyWare_Funding_Reserve__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Funding_Reserve__c</fullName>
    <label>AnyWare Funding Reserve</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>