unpackaged/main/default/objects/Opportunity/fields/AnyWare_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Funding_Source__c</fullName>
    <label>AnyWare Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Capital</fullName>
                <default>true</default>
                <label>Contract Capital</label>
            </value>
            <value>
                <fullName>IPro Media</fullName>
            </value>
            <value>
                <fullName>Texas Star Bank</fullName>
            </value>
            <value>
                <fullName>Great America Financial Services</fullName>
            </value>
            <value>
                <fullName>Wells Fargo Financial Leasing</fullName>
            </value>
            <value>
                <fullName>Comm3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>