unpackaged/main/default/objects/Opportunity/fields/AnyWare_Lease_Payoff_Residual__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Lease_Payoff_Residual__c</fullName>
    <label>AnyWare Lease Payoff / Residual</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>