unpackaged/main/default/objects/Opportunity/fields/AnyWare_Master_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Master_Agreement_Number__c</fullName>
    <label>AnyWare Master Agreement Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>