unpackaged/main/default/objects/Opportunity/fields/AnyWare_Miscellaneous_Total__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Miscellaneous_Total__c</fullName>
    <label>AnyWare Miscellaneous Total</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.GA_Billing_Group__c</field>
        <operation>equals</operation>
        <value>Miscellaneous</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>