unpackaged/main/default/objects/Opportunity/fields/AnyWare_Net_CPE_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Net_CPE_Funding_Amount__c</fullName>
    <formula>AnyWare_CPE_Funding_Amount__c  -  AnyWare_Lease_Payoff_Residual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare Net CPE Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>