unpackaged/main/default/objects/Opportunity/fields/AnyWare_Net_Funding_Less_Reserve__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Net_Funding_Less_Reserve__c</fullName>
    <formula>AnyWare_Net_CPE_Funding_Amount__c   -  AnyWare_Funding_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare Net Funding Less Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>