unpackaged/main/default/objects/Opportunity/fields/AnyWare_Non_Miscellaneous__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Non_Miscellaneous__c</fullName>
    <formula>AnyWare_CA_Total__c  +  AnyWare_CPE_Total__c  +  AnyWare_DC_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare Non-Miscellaneous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>