unpackaged/main/default/objects/Opportunity/fields/AnyWare_Non_Miscellaneous_Installation__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Non_Miscellaneous_Installation__c</fullName>
    <formula>( AnyWare_CA_Install_Total__c +   AnyWare_CPE_Installation_Total__c   +  AnyWare_DC_Install_Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare Non-Miscellaneous Installation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>