unpackaged/main/default/objects/Opportunity/fields/AnyWare_Opportunity_Total__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Opportunity_Total__c</fullName>
    <formula>IF(ISPICKVAL(Sale_Type__c,"AnyWare"),(  AnyWare_CPE_Total__c  /  AnyWare_Funding_Factor__c), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare Opportunity Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>