unpackaged/main/default/objects/Opportunity/fields/AnyWare_Quota_Point__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Quota_Point__c</fullName>
    <formula>AnyWare_Monthly_Total__c  *  Numeric_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare 2013 Quota Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>