unpackaged/main/default/objects/Opportunity/fields/AnyWare_Services_Total__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Services_Total__c</fullName>
    <formula>AnyWare_CA_Total__c + AnyWare_DC_Total__c + AnyWare_IT_Total__c + AnyWare_Miscellaneous_Total__c + AnyWare_Support_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare Services Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>