unpackaged/main/default/objects/Opportunity/fields/AnyWare_Support_Total__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Support_Total__c</fullName>
    <description>AnyWare Support Total</description>
    <inlineHelpText>AnyWare Support Total</inlineHelpText>
    <label>AnyWare Support Total</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.GA_Billing_Group__c</field>
        <operation>equals</operation>
        <value>Support Only</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>