unpackaged/main/default/objects/Opportunity/fields/AnyWare_Term_2016__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Term_2016__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is a required field. If unsure, set to 60.</description>
    <inlineHelpText>Select the appropriate AnyWare Term/Rate</inlineHelpText>
    <label>AnyWare Term</label>
    <referenceTo>Lease_Rates__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>