unpackaged/main/default/objects/Opportunity/fields/AnyWare_Term__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Term__c</fullName>
    <label>AnyWare Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>48 Months</fullName>
            </value>
            <value>
                <fullName>60 Months</fullName>
                <default>true</default>
                <label>60 Months</label>
            </value>
            <value>
                <fullName>72 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>