unpackaged/main/default/objects/Opportunity/fields/AnyWare_Term_Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Term_Discount_Total__c</fullName>
    <formula>AnyWare_CPE_Total__c  +  AnyWare_DC_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnyWare Term Discount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>