unpackaged/main/default/objects/Opportunity/fields/Anyware_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Anyware_Term_Months__c</fullName>
    <formula>AnyWare_Term_2016__r.Numeric_Term_in_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anyware Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>