unpackaged/main/default/objects/Opportunity/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approved by management.</description>
    <inlineHelpText>Field should be false unless management approval is granted.</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>