unpackaged/main/default/objects/Opportunity/fields/BC_P__c.field-meta.xml
<CustomField>
    <fullName>BC_P__c</fullName>
    <formula>Bokking_Chargebacks_Payoffs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargebacks &amp; Payoffs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>