unpackaged/main/default/objects/Opportunity/fields/Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number__c</fullName>
    <label>Bill Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>