unpackaged/main/default/objects/Opportunity/fields/Billing_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Audit_Date__c</fullName>
    <label>Billing Audit Date</label>
    <type>Date</type>
</CustomField>