unpackaged/main/default/objects/Opportunity/fields/Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity__c</fullName>
    <label>Billing Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPro Media</fullName>
            </value>
            <value>
                <fullName>Great America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>