unpackaged/main/default/objects/Opportunity/fields/Billing_Total__c.field-meta.xml
<CustomField>
    <fullName>Billing_Total__c</fullName>
    <label>Billing Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>