unpackaged/main/default/objects/Opportunity/fields/Billing_Verified__c.field-meta.xml
<CustomField>
    <fullName>Billing_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Verified</label>
    <type>Checkbox</type>
</CustomField>