unpackaged/main/default/objects/Opportunity/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <formula>Account.Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch</label>
    <type>Text</type>
</CustomField>