unpackaged/main/default/objects/Opportunity/fields/C1_Carrier__c.field-meta.xml
<CustomField>
    <fullName>C1_Carrier__c</fullName>
    <description>Circuit 1 Carrier</description>
    <label>Carrier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>