unpackaged/main/default/objects/Opportunity/fields/C5_Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>C5_Work_Order_Number__c</fullName>
    <description>Cat-5 Corresponding Work Order Number</description>
    <inlineHelpText>Please enter the Cat-5 Work Order Number that corresponds to this Opportunity.</inlineHelpText>
    <label>C5 Work Order Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>