unpackaged/main/default/objects/Opportunity/fields/Cash_DBO_24_Month_Lease_Payment__c.field-meta.xml
<CustomField>
    <fullName>Cash_DBO_24_Month_Lease_Payment__c</fullName>
    <formula>IF( Cash_Opportunity_Total__c &lt;=4999, ( Cash_Opportunity_Total__c * 0.0499),
IF( Cash_Opportunity_Total__c &lt;=14999, ( Cash_Opportunity_Total__c * 0.0487),
IF( Cash_Opportunity_Total__c &lt;=24999, ( Cash_Opportunity_Total__c * 0.0482),
IF( Cash_Opportunity_Total__c &lt;=49999, ( Cash_Opportunity_Total__c * 0.0478),
IF( Cash_Opportunity_Total__c &lt;=250000, ( Cash_Opportunity_Total__c * 0.0477),
1.00)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash DBO 24 Month Lease Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>