unpackaged/main/default/objects/Opportunity/fields/Cash_DBO_36_Month_Lease_Payment__c.field-meta.xml
<CustomField>
    <fullName>Cash_DBO_36_Month_Lease_Payment__c</fullName>
    <formula>IF( Cash_Opportunity_Total__c &lt;=4999, ( Cash_Opportunity_Total__c * 0.0357),
IF( Cash_Opportunity_Total__c &lt;=14999, ( Cash_Opportunity_Total__c * 0.0345),
IF( Cash_Opportunity_Total__c &lt;=24999, ( Cash_Opportunity_Total__c * 0.0341),
IF( Cash_Opportunity_Total__c &lt;=49999, ( Cash_Opportunity_Total__c * 0.0338),
IF( Cash_Opportunity_Total__c &lt;=250000, ( Cash_Opportunity_Total__c * 0.0336),
1.00)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash DBO 36 Month Lease Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>