unpackaged/main/default/objects/Opportunity/fields/Cash_Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Cash_Lease_Term__c</fullName>
    <label>Cash Lease Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>48 Months</fullName>
            </value>
            <value>
                <fullName>60 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>