unpackaged/main/default/objects/Opportunity/fields/Cash_Promotion_Description__c.field-meta.xml
<CustomField>
    <fullName>Cash_Promotion_Description__c</fullName>
    <label>Promotion Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>