unpackaged/main/default/objects/Opportunity/fields/Cash_Promotional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Cash_Promotional_Discount__c</fullName>
    <label>Cash Promotional Discount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>