unpackaged/main/default/objects/Opportunity/fields/Cash_Quota_Points__c.field-meta.xml
<CustomField>
    <fullName>Cash_Quota_Points__c</fullName>
    <formula>Opportunity_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Quota Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>