unpackaged/main/default/objects/Opportunity/fields/CC_Funding_Batch__c.field-meta.xml
<CustomField>
    <fullName>CC_Funding_Batch__c</fullName>
    <description>Contract Capital Funding Batch</description>
    <label>CC Funding Batch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>