unpackaged/main/default/objects/Opportunity/fields/Comm3_Support_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Comm3_Support_Cost_Rate__c</fullName>
    <defaultValue>(00.35)</defaultValue>
    <label>Comm3 Support Cost Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>