unpackaged/main/default/objects/Opportunity/fields/Commission_Earned_By__c.field-meta.xml
<CustomField>
    <fullName>Commission_Earned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>