unpackaged/main/default/objects/Opportunity/fields/Commission_Hold__c.field-meta.xml
<CustomField>
    <fullName>Commission_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Hold</label>
    <type>Checkbox</type>
</CustomField>