unpackaged/main/default/objects/Opportunity/fields/Commission_Hold_Comments__c.field-meta.xml
<CustomField>
    <fullName>Commission_Hold_Comments__c</fullName>
    <label>Commission Hold Comments</label>
    <type>TextArea</type>
</CustomField>