unpackaged/main/default/objects/Opportunity/fields/Contract_Addendum_Text__c.field-meta.xml
<CustomField>
    <fullName>Contract_Addendum_Text__c</fullName>
    <label>Contract Addendum Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>